2006-01-27  Geoff Youngs <g@intersect-uk.co.uk>

	* src/rbgdkproperty.c: Fix to be able to use _NET_WM_PID property.
	* sample/misc/ipc.rb: Added.
	
2006-01-27  Tilman Sauerbeck <tilman@code-monkey.de>

	* src/rbgdkpixbuf.c: Fixed wrong argument of 
	Gdk::Pixbuf#render_pixmap_and_mask.

2006-01-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtk.c: Restore default poll function when ruby exits.

2006-01-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtk.c: Fixed a bug that Gtk.events_ending? always returns
	true.
	* src/rbgtkmain.c: ditto.

2005-12-01  Kouhei Sutou  <kou@kono.cis.iwate-u.ac.jp>

	* sample/gtk-demo/hypertext.rb: Fixed a return key handling bug.

2005-11-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkitemfactory.c: Fixed a bug of Gtk::ItemFactory.popup.
	Reported by Grant McLean.

2005-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/tree_combo.rb: Added.

2005-11-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkpango.c: Fix a typo of Pango::Context#colormap=. 

2005-11-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtktextbuffer.c (txt_get_text, txt_get_slice): Fix typo.

2005-11-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcellview.c, rbgtktreeviewcolumn.c: Apply G_CHILD_*.

2005-11-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkiconview.c,rbgtktreerowreference.c, rbgtktreemodelfilter.c,
	rbgtktreemodel.c, rbgtktreestore.c, rbgtkliststore.c, 
	rbgtktextiter.c, rbgtktextappearance.c: Apply G_CHILD_*.

2005-11-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextbuffer.c, rbgtktextview.c: Apply G_CHILD_*. 
	* src/rbgtktexttagtable.c: Add an alias Gtk::TextTagTable#[] of
	Gtk::TextTagTable#lookup.

2005-11-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtk.c: rb_thread_wait_for waits 10ms instead of 100ms
	to avoid to lose any signals for Win32. Report by MIYAMUKO Katsuyuki.
	* src/rbgtkcontainer.c, rbgtkbox.c: Apply G_CHILD_*.

2005-10-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/iconview.rb: Added.
