@@ -1,3 +1,8 @@
+2006-01-28  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgtkwidget.c: Added Gtk::Widget#set_widget by  Daniel Chokola.
+	Added Gtk::Widget#set_requisition.
+
 2006-01-27  Geoff Youngs <g@intersect-uk.co.uk>
 
 	* src/rbgdkproperty.c: Fix to be able to use _NET_WM_PID property.
